Fixing up toggling between light and dark modes

--- a/src/components/about-hero/about-hero.scss
+++ b/src/components/about-hero/about-hero.scss
@@ -4,6 +4,7 @@
   font-family: $font-primary;
   color: var(--color-primary);
   font-size: 24px;
+  position: relative;
 
   .big {
     font-size: 70px;
@@ -50,5 +51,11 @@
     .spacer {
       padding: 0px 5px;
     }
+  }
+
+  .steve-box {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
   }
 }
