--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -2,7 +2,7 @@
   font-family: Sofia-Pro-Bold, sans-serif;
   font-size: 24px;
   font-weight: bold;
-  color: white;
+  color: var(--color-primary);
   padding-bottom: 23px;
   margin: 0px;
 }
@@ -29,9 +29,5 @@
 }
 
 @media (max-width: 768px) {
-  .area-title {
-    background-color: white;
-    color: black;
-    padding: 8px 0px;
-  }
+
 }
